# 2bdb

./: .build.yml  .gitignore  Makefile  README.md  _CoqProject  libtx.opam  test.tla
doc/: main.tex
erl/2bdb/: Makefile  rebar.config
erl/2bdb/src/: 2bdb.app.src  2bdb.erl  2bdb_app.erl  2bdb_consumer.erl  2bdb_int.hrl  2bdb_partition_worker.erl  2bdb_sup.erl  2bdb_tlog_transceiver.erl  2bdb_worker.erl  ets_wrapper.erl
erl/2bdb/test/: docker-compose.yml  setup-test-env.sh  system_test_SUITE.erl
fstar/: Follower.fst
src/: EqDec.v  FoldIn.v  Follower.v  IIBDB.v  KafkaModel.v  Locker.v  Storage.v  ToySep.v  Tx.v
theories/: ConsistencyLevels.v  DirtyBootstrap.v  EqDec.v  FoldIn.v  InterleaveLists.v  KafkaModel.v  Locker.v  Misc.v  Models.v  Permutation.v  SLOT.v  Storage.v  Systems.v  ToySep.v
theories/Handlers/: Deterministic.v  KV.v  MQ.v  Mutable.v  Mutex.v
theories/SLOT/: Bruteforce.v  Ensemble.v  EventTrace.v  Generator.v  Handler.v  Hoare.v  Process.v  Tactics.v  Zipper.v
