opam-version: "2.0"
version: "dev"

homepage: "https://github.com/k32/libtx"
dev-repo: "git+https://github.com/k32/libtx.git"
license: "GPL-3"
maintainer: "noreply@example.com"
synopsis: "Collection of formal proofs about distributed systems"
description: """
"""

build: [
  [make "-j%{jobs}%"]
]
install: [make "install"]
depends: [
  "coq" {(>= "8.11" & < "8.13~") | (= "dev")}
  "coq-record-update" {(>= "0.2" & < "0.3~")}
  "coq-stdpp"
  "coq-equations"
  "coq-hammer"
]

tags: [
  "keyword:program verification"
  "keyword:distributed algorithms"
]
authors: [
  "k32"
]
